fix: drawer gap visible on spring animation

--- a/themes/bella/styles/components/disclosure/sheet.scss
+++ b/themes/bella/styles/components/disclosure/sheet.scss
@@ -8,12 +8,15 @@
 [ui-slot="sheet-content"] {
   --sheet-width: 460px;
 
+  /* This is so that we don't see a gap when the drawer overshoots on it's enter animation */
+  --spring-width-offset: 10px;
+
   display: flex;
   position: fixed;
   z-index: 50;
   flex-direction: column;
   justify-content: space-between;
-  width: var(--sheet-width);
+  width: calc(var(--sheet-width) + var(--spring-width-offset));
   height: 100dvh;
   transition: var(--transition-expressive-slow-spatial);
   border: none;
@@ -21,7 +24,7 @@
   color: inherit;
   inset: unset;
   inset-block-start: var(--spacing-0);
-  inset-inline-end: calc(var(--sheet-width) * -1);
+  inset-inline-end: calc(calc(var(--sheet-width) + var(--spring-width-offset)) * -1);
 
   /* Header */
   [ui-slot="sheet-header"] {
@@ -72,7 +75,7 @@
 
   /* State */
   &:popover-open {
-    inset-inline-end: var(--spacing-0);
+    inset-inline-end: calc(var(--spacing-0) - var(--spring-width-offset));
 
     &::backdrop {
       backdrop-filter: blur(10px);
@@ -80,7 +83,7 @@
     }
 
     @starting-style {
-      inset-inline-end: calc(var(--sheet-width) * -1);
+      inset-inline-end: calc(calc(var(--sheet-width) + var(--spring-width-offset)) * -1);
 
       &::backdrop {
         backdrop-filter: blur(0);
